--- a/plugins/getty-images/example/package.json
+++ b/plugins/getty-images/example/package.json
@@ -7,8 +7,7 @@
     "photoeditorsdk": "5.10.0",
     "styled-components": "4.4.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "web-vitals": "^1.0.1"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,10 +21,9 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
