--- a/plugins/getty-images/tsconfig.json
+++ b/plugins/getty-images/tsconfig.json
@@ -40,7 +40,8 @@
 
     "lib": ["es2017", "dom"],
     "types": [],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "typeRoots": ["node_modules/@types", "src/types"],
+    "removeComments":false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
