--- a/plugins/getty-images/example/package.json
+++ b/plugins/getty-images/example/package.json
@@ -3,21 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pesdk/getty-images": "link:../",
-    "photoeditorsdk": "5.11.0",
-    "styled-components": "4.4.1",
+    "@pesdk/getty-images": "file:../",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "npm-run-all": "^4.1.5",
+    "photoeditorsdk": "^5.16.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "request": "^2.88.2",
+    "styled-components": "4.4.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "vite": "2.0.4"
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
+    "cypress": "^9.7.0",
+    "vite": "2.9.9"
   },
   "scripts": {
-    "start": "yarn && vite"
+    "start": "vite",
+    "server": "node app.js",
+    "build": "vite build",
+    "ci:e2e:serve": "npx serve -s dist -l 8080",
+    "ci:e2e:start": "yarn run build && run-p server ci:e2e:serve",
+    "ci:e2e:command": "cypress run --browser chrome --headless --project ./tests/e2e"
   },
   "browserslist": {
     "production": [
