--- a/plugins/getty-images/package.json
+++ b/plugins/getty-images/package.json
@@ -1,29 +1,45 @@
 {
   "name": "@pesdk/getty-images",
-  "version": "1.0.0",
-  "main": "dist/getty-images.js",
-  "umd:main": "dist/getty-images.umd.js",
-  "module": "dist/getty-images.m.js",
-  "esmodule": "dist/getty-images.modern.js",
+  "version": "1.2.0",
+  "main": "./dist/getty-images.umd.js",
+  "module": "./dist/getty-images.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/getty-images.es.js",
+      "require": "./dist/getty-images.umd.js"
+    }
+  },
   "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md",
-    "LICENSE.md"
+    "LICENSE.md",
+    "package.json"
   ],
-  "dependencies": {
-    "react-query": "3.5.12",
-    "use-debounce": "5.2.0"
-  },
   "peerDependencies": {
-    "photoeditorsdk": "^5.11.0",
+    "photoeditorsdk": "^5.16.0",
     "react": ">= 16.8.6",
     "react-dom": ">= 16.8.6",
     "styled-components": ">= 4.0.0"
   },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "react-query": "3.5.12",
+    "request": "^2.88.2",
+    "use-debounce": "5.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.3.2",
+    "vite": "^2.9.9",
+    "vite-plugin-dts": "^1.2.0"
+  },
   "scripts": {
-    "build": "yarn microbundle src/index.ts --jsx React.createElement --name PluginGettyImages",
-    "test": ""
+    "start": "vite",
+    "server": "node app.js",
+    "build": "vite build",
+    "publish": "npm publish",
+    "release": "yarn build && yarn publish"
   },
   "keywords": [
     "photo",
@@ -38,9 +54,9 @@
     "name": "img.ly GmbH",
     "email": "contact@img.ly"
   },
-  "homepage": "https://www.photoeditorsdk.com/",
+  "homepage": "https://www.img.ly/",
   "bugs": {
-    "url": "https://support.photoeditorsdk.com"
+    "url": "https://img.ly/support"
   },
   "repository": {
     "type": "git",
