--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./plugins"
   },
   "dependencies": {
-    "photoeditorsdk": "5.17.0",
+    "photoeditorsdk": "5.17.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "4.4.1"
@@ -18,18 +18,19 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "4.4.0",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "@typescript-eslint/parser": "5.27.0",
-    "eslint": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
+    "cypress": "^12.9.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.30.0",
-    "prettier": "2.6.2",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "prettier": "2.8.7",
     "typescript": "^4.5.4"
   },
   "workspaces": [
