--- a/plugins/getty-images/package.json
+++ b/plugins/getty-images/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pesdk/getty-images",
-  "version": "1.2.0",
+  "version": "1.4.0",
   "main": "./dist/getty-images.umd.js",
   "module": "./dist/getty-images.es.js",
   "exports": {
@@ -17,28 +17,27 @@
     "package.json"
   ],
   "peerDependencies": {
-    "photoeditorsdk": "^5.16.0",
+    "photoeditorsdk": ">=5.17.0",
     "react": ">= 16.8.6",
     "react-dom": ">= 16.8.6",
     "styled-components": ">= 4.0.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "react-query": "3.5.12",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "react-query": "3.39.3",
     "request": "^2.88.2",
     "use-debounce": "5.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.3.2",
-    "vite": "^2.9.9",
-    "vite-plugin-dts": "^1.2.0"
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.2.1",
+    "vite-plugin-dts": "^2.2.0"
   },
   "scripts": {
     "start": "vite",
     "server": "node app.js",
     "build": "vite build",
-    "publish": "npm publish",
     "release": "yarn build && yarn publish"
   },
   "keywords": [
